Create version 2.7.0